; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_emulate.c_emulate_pop_sreg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_emulate.c_emulate_pop_sreg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.x86_emulate_ctxt = type { i32, %struct.decode_cache }
%struct.decode_cache = type { i32 }
%struct.x86_emulate_ops = type { i32 }

@X86EMUL_CONTINUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.x86_emulate_ctxt*, %struct.x86_emulate_ops*, i32)* @emulate_pop_sreg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @emulate_pop_sreg(%struct.x86_emulate_ctxt* %0, %struct.x86_emulate_ops* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.x86_emulate_ctxt*, align 8
  %6 = alloca %struct.x86_emulate_ops*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.decode_cache*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.x86_emulate_ctxt* %0, %struct.x86_emulate_ctxt** %5, align 8
  store %struct.x86_emulate_ops* %1, %struct.x86_emulate_ops** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load %struct.x86_emulate_ctxt*, %struct.x86_emulate_ctxt** %5, align 8
  %12 = getelementptr inbounds %struct.x86_emulate_ctxt, %struct.x86_emulate_ctxt* %11, i32 0, i32 1
  store %struct.decode_cache* %12, %struct.decode_cache** %8, align 8
  %13 = load %struct.x86_emulate_ctxt*, %struct.x86_emulate_ctxt** %5, align 8
  %14 = load %struct.x86_emulate_ops*, %struct.x86_emulate_ops** %6, align 8
  %15 = load %struct.decode_cache*, %struct.decode_cache** %8, align 8
  %16 = getelementptr inbounds %struct.decode_cache, %struct.decode_cache* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @emulate_pop(%struct.x86_emulate_ctxt* %13, %struct.x86_emulate_ops* %14, i64* %9, i32 %17)
  store i32 %18, i32* %10, align 4
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* @X86EMUL_CONTINUE, align 4
  %21 = icmp ne i32 %19, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %3
  %23 = load i32, i32* %10, align 4
  store i32 %23, i32* %4, align 4
  br label %33

24:                                               ; preds = %3
  %25 = load %struct.x86_emulate_ctxt*, %struct.x86_emulate_ctxt** %5, align 8
  %26 = getelementptr inbounds %struct.x86_emulate_ctxt, %struct.x86_emulate_ctxt* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i64, i64* %9, align 8
  %29 = trunc i64 %28 to i32
  %30 = load i32, i32* %7, align 4
  %31 = call i32 @kvm_load_segment_descriptor(i32 %27, i32 %29, i32 %30)
  store i32 %31, i32* %10, align 4
  %32 = load i32, i32* %10, align 4
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %24, %22
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i32 @emulate_pop(%struct.x86_emulate_ctxt*, %struct.x86_emulate_ops*, i64*, i32) #1

declare dso_local i32 @kvm_load_segment_descriptor(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
